# template-repository

./: README.md  Taskfile.yaml  cookiecutter.json  package-lock.json  package.json
.github/actions/setup_environment/: action.yaml
.github/workflows/: check-pr-title.yaml  check-pr.yaml  dependencies-update.yaml
hooks/: post_gen_project.py
tests/: replays.json
tests/additional_files/service1/: Taskfile.yaml
tests/additional_files/service2/: Taskfile.yaml
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .prettierignore  README.md  Taskfile.yaml  {{cookiecutter._empty_guard}}package.json
{{cookiecutter.project_slug}}/.github/actions/setup_environment/: action.yaml
{{cookiecutter.project_slug}}/.github/workflows/: check-pr-title.yaml  check-pr.yaml  dependencies-update.yaml  release-pr-cleanup.yaml  release-pr.yaml  release-scan.yaml  release.yaml
{{cookiecutter.project_slug}}/.scripts/: README.md  Taskfile.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.scripts/bash/: environment_activate
{{cookiecutter.project_slug}}/.scripts/secrets/: local.env.sample  local.yaml
{{cookiecutter.project_slug}}/docker/: .env  README.md  Taskfile.yaml
{{cookiecutter.project_slug}}/docker/network/: base-compose.yaml
